objects/Reminder__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <inlineHelpText>Event like Birthday, Anniversary, Payment etc</inlineHelpText>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date_Time__c</fullName>
        <description>Reminder email will be sent at this time</description>
        <inlineHelpText>Reminder email will be sent at this time</inlineHelpText>
        <label>Reminder Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Reminder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>